# a-rusty-musicbox

./: .gitignore  LICENSE  README.md
Miscellaneous/: CS 410P - Rust Programming - Project Proposal, A Rusty Musicbox (Fall 2023).ipynb
a-rusty-musicbox/: Cargo.toml
a-rusty-musicbox/a-rusty-musicbox/: Cargo.toml
a-rusty-musicbox/a-rusty-musicbox/src/: lib.rs  main.rs
a-rusty-musicbox/a-rusty-piano/: Cargo.toml
a-rusty-musicbox/a-rusty-piano/src/: main.rs
a-rusty-musicbox/a-rusty-theremin/: Cargo.toml
a-rusty-musicbox/a-rusty-theremin/src/: etherphone.rs  gui.rs  lib.rs  main.rs  panel.rs
a-rusty-musicbox/a-rusty-throat/: Cargo.toml
a-rusty-musicbox/a-rusty-throat/src/: larynx.rs  lib.rs  main.rs  vocalcords.rs
a-rusty-musicbox/selected_cargodocs/a_rusty_musicbox/: all.html  fn.main.html  index.html
a-rusty-musicbox/selected_cargodocs/a_rusty_theremin/: all.html  fn.musictime.html  index.html  sidebar-items.js
a-rusty-musicbox/selected_cargodocs/a_rusty_throat/: all.html  fn.sing.html  index.html  sidebar-items.js
a-rusty-musicbox/src/: lib.rs  main.rs
