# [package]
# name = "a-rusty-musicbox"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# iced = "0.10.0"
# iced_audio = "0.12.0"

# [lib]
# path = "src/lib.rs"

# [[bin]]
# name = "a-rusty-musicbox"
# path = "src/main.rs"

[workspace]
members = [ "a-rusty-musicbox", "a-rusty-theremin", "a-rusty-piano"]