[workspace]
members = [
    "a-rusty-theremin",
    "a-rusty-throat",
    # "a-rusty-piano",
]
[package]
name = "a-rusty-musicbox"
version = "1.0.1"
authors = ["Dan Jang <realdanjang@gmail.com>"]
edition = "2021"

[[bin]]
name = "a_rusty_musicbox"
path = "src/main.rs"

[dependencies]
prompted = "0.2.8"


[dependencies.a-rusty-theremin]
path = "./a-rusty-theremin"

[dependencies.a-rusty-throat]
path = "./a-rusty-throat"
