[package]
name = "a-rusty-piano"
version = "0.0.1"
authors = ["Ritiek <ritiekmalhotra123@gmail.com>", "DebuggerDan"]
description = "Just a mini-wrapper piano library for the piano-rs crate, to incorporate into the main a-rusty-musicbox GUI wrapping library - full creds to piano-rs author ritlek <ritiekmalhotra123@gmail.com>"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piano-rs = "0.1.0"